--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,13 @@
       name="description"
       content="Kheemnet Global is an E-commerce Website"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+      integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>KHEEMNET GLOBAL</title>
   </head>
   <body>
